<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FavoritesFragment">

    <LinearLayout
        android:id="@+id/degree_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="39dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/degree_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="소프트웨어학부"
                android:textAppearance="@style/degree_text_style"/>

            <ImageView
                android:id="@+id/set_degree_button"
                android:layout_width="18dp"
                android:layout_height="15.75dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/ic_set_degree"/>

        </LinearLayout>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/filter_group_button"
                    android:layout_width="wrap_content"
                    android:layout_height="27dp"
                    android:layout_marginEnd="10dp"
                    android:gravity="center_vertical"
                    android:paddingStart="13dp"
                    android:paddingEnd="13dp"
                    android:text="@string/filter_group"
                    android:textAppearance="@style/filter_text_style"
                    android:background="@drawable/filter_non_clicked"/>

                <TextView
                    android:id="@+id/filter_date_button"
                    android:layout_width="wrap_content"
                    android:layout_height="27dp"
                    android:layout_marginEnd="10dp"
                    android:gravity="center_vertical"
                    android:paddingStart="13dp"
                    android:paddingEnd="13dp"
                    android:text="@string/filter_date"
                    android:textAppearance="@style/filter_text_style"
                    android:background="@drawable/filter_non_clicked"/>

                <TextView
                    android:id="@+id/filter_efficiency_button"
                    android:layout_width="wrap_content"
                    android:layout_height="27dp"
                    android:layout_marginEnd="10dp"
                    android:gravity="center_vertical"
                    android:paddingStart="13dp"
                    android:paddingEnd="13dp"
                    android:text="@string/filter_efficiency"
                    android:textAppearance="@style/filter_text_style"
                    android:background="@drawable/filter_non_clicked"/>

                <TextView
                    android:id="@+id/filter_partner_button"
                    android:layout_width="wrap_content"
                    android:layout_height="27dp"
                    android:gravity="center_vertical"
                    android:paddingStart="13dp"
                    android:paddingEnd="13dp"
                    android:text="@string/filter_partner"
                    android:textAppearance="@style/filter_text_style"
                    android:background="@drawable/filter_non_clicked"/>

            </LinearLayout>

        </HorizontalScrollView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="153dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/favorite_info_text"
            android:layout_width="177dp"
            android:layout_height="22dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/favorite_info_text"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/store_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>