<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/store_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/store_image"
            android:layout_width="115dp"
            android:layout_height="115dp"
            android:src="@mipmap/ic_launcher"
            android:background="@drawable/background_store"
            android:scaleType="centerCrop"
            android:clipToOutline="true"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="19dp"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/store_text"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingStart="2dp"
                    android:paddingEnd="2dp"
                    android:text="Store"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/filter_partner_image"
                    android:layout_width="39dp"
                    android:layout_height="18dp"
                    android:layout_marginStart="4dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/filter_partner_checked"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

                <ImageView
                    android:id="@+id/favorite_button"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:padding="5dp"
                    android:src="@drawable/favorite_clicked"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/pin_image"
                    android:layout_width="11.76dp"
                    android:layout_height="15dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginEnd="4dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/location_pin"/>

                <TextView
                    android:id="@+id/location_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="서울 동작구 00로 00"
                    android:textAppearance="@style/hint_text_style"/>

            </LinearLayout>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/filter_group_image"
                        android:layout_width="wrap_content"
                        android:layout_height="27dp"
                        android:layout_marginEnd="10dp"
                        android:gravity="center_vertical"
                        android:paddingStart="13dp"
                        android:paddingEnd="13dp"
                        android:text="@string/filter_group"
                        android:textAppearance="@style/filter_text_style"
                        android:background="@drawable/filter_non_clicked"/>

                    <TextView
                        android:id="@+id/filter_date_image"
                        android:layout_width="wrap_content"
                        android:layout_height="27dp"
                        android:layout_marginEnd="10dp"
                        android:gravity="center_vertical"
                        android:paddingStart="13dp"
                        android:paddingEnd="13dp"
                        android:text="@string/filter_date"
                        android:textAppearance="@style/filter_text_style"
                        android:background="@drawable/filter_non_clicked"/>

                    <TextView
                        android:id="@+id/filter_efficiency_image"
                        android:layout_width="wrap_content"
                        android:layout_height="27dp"
                        android:layout_marginEnd="10dp"
                        android:gravity="center_vertical"
                        android:paddingStart="13dp"
                        android:paddingEnd="13dp"
                        android:text="@string/filter_efficiency"
                        android:textAppearance="@style/filter_text_style"
                        android:background="@drawable/filter_non_clicked"/>

                </LinearLayout>

            </HorizontalScrollView>

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="7dp"
        android:background="@color/line"/>

</LinearLayout>